force-app/main/default/objects/Case_Summary__c/Case_Summary__c.object-meta.xml
<CustomObject>
    <label>Case Summary</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Case Summary #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>