force-app/main/default/objects/Case_Summary__c/fields/CaseCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CaseCreatedDate__c</fullName>
    <label>Case Created Date</label>
    <type>DateTime</type>
</CustomField>