force-app/main/default/objects/Case_Summary__c/fields/CaseIndividual__c.field-meta.xml
<CustomField>
    <fullName>CaseIndividual__c</fullName>
    <label>Case Individual</label>
    <length>120</length>
    <type>Text</type>
</CustomField>