force-app/main/default/objects/Case_Summary__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>Case Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>