force-app/main/default/objects/Case_Summary__c/fields/CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CaseStatus__c</fullName>
    <label>Case Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>