force-app/main/default/objects/Case_Summary__c/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <label>Case Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>