force-app/main/default/objects/Case_Summary__c/recordTypes/Grievences.recordType-meta.xml
<RecordType>
    <fullName>Grievences</fullName>
    <active>true</active>
    <label>Grievences</label>
</RecordType>