force-app/main/default/objects/Case_Summary__c/recordTypes/NORMAL.recordType-meta.xml
<RecordType>
    <fullName>NORMAL</fullName>
    <active>true</active>
    <label>NORMAL</label>
</RecordType>