force-app/main/default/objects/Case_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case__c</columns>
    <columns>CaseIndividual__c</columns>
    <columns>CaseType__c</columns>
    <columns>CaseCreatedDate__c</columns>
    <columns>CaseStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>